# TenderIntel

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_FRONTEND_GAP_ANALYSIS.md  COMPREHENSIVE_API_TEST_REPORT.md  COMPREHENSIVE_FRONTEND_IMPLEMENTATION_PLAN.md  CONTRIBUTING.md  DEPLOY_TO_WEB.md  FINAL_BUG_FIXES_AND_COMPREHENSIVE_TESTING.md  FINAL_COMPREHENSIVE_TEST_RESULTS.md  FRONTEND_GAP_ANALYSIS.md  FRONTEND_TESTING_COMPREHENSIVE_RESULTS.md  GITHUB_RELEASE_GUIDE.md  LICENSE  LIVE_CPPP_SCRAPING_FINAL_ANALYSIS.md  Makefile  README.md  SECURITY.md  SIMPLIFIED_FRONTEND_APPROACH.md  config.yaml  docker-compose.yml  pyproject.toml  railway.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
TenderIntel/: README_VERIFICATION_REPORT.md
config/: synonyms.yaml
config/dev/: config.json  opensearch_config.yaml  opensearch_synonyms.txt  tender_index_template.json
data/: tenders.db
docker/: Dockerfile  Dockerfile.frontend  nginx.conf
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  INSTALLATION.md  USER_MANUAL.md
frontend/: ADVANCED_SEARCH_BUG_FIX.md  ADVANCED_SEARCH_IMPLEMENTATION_COMPLETE.md  README.md  index.html  test_minimal_search.html
frontend/assets/data/: demo_scenarios.json
frontend/js/: app.js
frontend/js/components/: common.js  dashboard.js  heatmap.js  search.js
frontend/js/pages/: dashboard-content.html  heatmap-content.html  search-content.html
frontend/js/services/: api.js  cache.js  export.js  notifications.js
frontend/js/utils/: colors.js  constants.js  formatters.js  validators.js
scripts/: verify_installation.py
scripts/database/: financial_schema_migration.py
scripts/setup/: initialize_project.py  setup_windows.bat  setup_windows.ps1
src/tenderintel/: __init__.py
src/tenderintel/analytics/: currency_normalizer.py  financial_analysis_engine.py  visualization_data_generator.py
src/tenderintel/api/: __init__.py  server.py
src/tenderintel/config/: __init__.py  defaults.py  loader.py  validator.py
src/tenderintel/core/: __init__.py  client.py  database_manager.py  models.py
src/tenderintel/scraper/: captcha_solver.py  db.py  downloader.py  s3_uploader.py  tender_scraper.py  tenderx_integration.py
src/tenderintel/search/: __init__.py  base.py  manager.py  search_engine_interface.py  sqlite_fts5_engine.py  synonym_manager.py  synonym_manager_yaml.py
src/tenderintel/search/engines/: __init__.py  opensearch_engine.py  sqlite_engine.py
src/tenderintel/ui/: enhanced_index.html  index.html
tests/financial/: test_financial_analysis_system.py
tests/integration/: test_api_comprehensive.py
